--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-ATLAS_URI=mongodb+srv://admin:ZvjZUFg2XG4XT4KR@cluster0.jbjwv.mongodb.net/Cluster0?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://admin:LRs8p3lsplGwSsp0@quiz.wp8vv.mongodb.net/Quiz?retryWrites=true&w=majority
