--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "find-config": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.2"
