--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=5000
 ATLAS_URI=mongodb+srv://admin:LRs8p3lsplGwSsp0@quiz.wp8vv.mongodb.net/Quiz?retryWrites=true&w=majority
+ATLAS_URI_ALT=mongodb://admin:LRs8p3lsplGwSsp0@quiz-shard-00-00.wp8vv.mongodb.net:27017,quiz-shard-00-01.wp8vv.mongodb.net:27017,quiz-shard-00-02.wp8vv.mongodb.net:27017/Quiz?ssl=true&replicaSet=atlas-envfh7-shard-0&authSource=admin&retryWrites=true&w=majority
+SECRET=secret
