--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "quiz",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "0.9.5"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "axios": "^0.21.1"
   }
 }
